Fix: cut off text overflow in product card

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -119,7 +119,7 @@
     align-items: start;
     z-index: 1;
     flex: 0 1 max(250px, 15%);
-    max-height: 70%;
+    max-height: 75%;
 }
 
 .home-heading h1 {
@@ -169,6 +169,7 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     overflow: hidden;
+    text-overflow: ellipsis;
 
     background-color: white;
     border: 2px solid #9BC4CB;
@@ -200,17 +201,24 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 10px;
+    gap: 10px;
+    text-overflow: ellipsis;
 }
 
 .info-header h3 {
     font-size: 1.1rem;
     font-weight: 600;
-}
 
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    line-clamp: 3; /* number of lines before cutting off */
+}
 .info-header p {
-    font-size: 1rem;
-    font-weight: 500;
+    font-size: 1.1rem;
+    font-weight: 400;
+    flex-shrink: 0; /* prevent p from shrinking */
 }
 
 
